# Ethereum-censorability-monitor

./: .gitignore  .pylintrc  02-add_validator_pool_to_metrics_collection.py  03-add_validator_pool_to_censored_txs.py  04-gather-historical-data.py  05-gather-historical-block-data.py  LICENSE.md  README.md  block_collector.Dockerfile  block_collector.py  censorship_analytics.Dockerfile  censorship_analytics.py  data_collector.Dockerfile  data_collector.py  docker-compose-eth-node.yaml  docker-compose-geth-node.yaml  docker-compose-mongoDB.yaml  docker-compose.yaml  extract_data_from_mongo.py  first_data_analysis.ipynb  gather_contracts_abi.py  gather_dataset.ipynb  load_non_lido_validators_to_db.py  logging.yaml  main.py  mempool_collector.py  mempool_gas_estimator.Dockerfile  mempool_gas_estimator.py  pyproject.toml  setup.cfg  test_web3_eth.ipynb  web-docker-compose.yaml
api/: .dockerignore  Dockerfile  demo-main.py  gunicorn.config.py  main.py  metrics.py  pyproject.toml  requirements.txt  utils.py
api/src/: app.py  data.py  main.py  metrics.py  middleware.py  mongo.py  utils.py  views.py
censorability_monitor/analytics/: __init__.py  fetch.py  validators.py
censorability_monitor/data_collection/: __init__.py  address_collector.py  block_collector.py  collector.py  data_collector.py  gas_estimation.py  manager.py  mempool_collector.py  ofac.py  utils.py
dataflow/: Dockerfile  metrics_updater.py  requirements.txt  run_updater.sh  runner.py  utils.py
eth_node/: docker-compose.yaml  run_geth_node.sh
frontend/: .dockerignore  Dockerfile  index.html  open-react-template.code-workspace  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/css/: latency.css  style.css  tailwind.config.js
frontend/src/pages/: Home.jsx  Team.jsx
lido_parser/: cfg.py  main.py  parse_lido.sh  pyproject.toml  start_autoupdate.sh
models/: classifier_20000_blocks.cbm  classifier_8000_blocks.cbm
mongo_db/: docker-compose.yaml  run_mongo.sh
mongo_migrator/: .dockerignore  Dockerfile  entrypoint.sh  main.py  requirements.txt
monitoring/: monitoring-compose.yaml  prometheus.yml
notebooks/: 01 - EDA.ipynb  02 - mempool analysis.ipynb  03 - Confidence Intervals.ipynb  03 - download accounts data.ipynb  04 - next_block_tx_classifier-Copy1.ipynb  04-01 - next_block_tx_classifier_less_feats.ipynb  05 - get gas estimation.ipynb  07 - data analysis.ipynb  08 - add ofac and validators to mongo.ipynb  09 - txs classifier-add_feats.ipynb  09 - txs classifier.ipynb  09-3 - txs classifier test.ipynb  first_data_analysis.ipynb  get_additional_tx_data.ipynb  lido_validators.ipynb  process_transactions.ipynb  saved_transactions_args_addresses.ipynb  test_web3_eth.ipynb
ofac_parser/: cfg.py  main.py  pyproject.toml  start_autoupdate.sh
ofac_parses/: main.py  pyproject.toml
parsers/: .dockerignore  Dockerfile  cfg.py  lido_parser.py  ofac_parser.py  pyproject.toml  start_autoupdate.sh  utils.py
web/censorred/: manage.py  pyproject.toml
web/censorred/censorred/: asgi.py  settings.py  urls.py  wsgi.py
web/censorred/templates/: index.html
web/censorred/validator_bars/: apps.py  views.py
(+16 files in other folders)
