[tool.poetry]
name = "ethereum-censorability-monitor"
version = "0.1.0"
description = ""
authors = ["Mikhail Gurevich <gurevich3004@gmail.com>"]
readme = "README.md"
packages = [{include = "ethereum_censorability_monitor"}]

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1.5.2"
web3 = "^5.31.3"
pymongo = "^4.3.3"
PyYAML = "^6.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
aiohttp = "^3.8.3"
evmdasm = "^0.1.10"
catboost = "^1.1.1"
scikit-learn = "^1.2.1"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
jupyterlab = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
    | profiling
    )/
'''
skips = ["B301"]
