[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["PetrovitchSharp <korchagin_official@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
