[tool.poetry]
name = "censorred"
version = "0.1.0"
description = ""
authors = ["PetrovitchSharp <korchagin_official@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
pandas = "^1.5.3"
plotly = "^5.13.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
